# CPP_Game

./: .gitignore  CMakeLists.txt  main.cpp
.fleet/: run.json
GameEngine/: CMakeLists.txt
GameEngine/src/: Entity.cpp  Entity.h  EntityGroup.cpp  EntityGroup.h  GameEngine.cmake  GameEngine.cpp  GameEngine.h  GameEngineMath.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h  Wrapper.h  WrapperBase.cpp  WrapperBase.h  WrapperItem.cpp  WrapperItem.h
GameEngine/src/Components/: Component.cpp  Component.h  Components.cmake  ImageComponent.cpp  ImageComponent.h  ShapeComponent.cpp  ShapeComponent.h  TransformComponent.cpp  TransformComponent.h
GameEngine/src/Components/Shapes/: BaseShape.cpp  BaseShape.h  RectangleShape.cpp  RectangleShape.h  Shapes.cmake
GameEngine/test/: EntityGroupTest.cpp  EntityTest.cpp  GameEngineTest.cmake  GameEngineTest.cpp
GameEngine/test/Components/: TransformComponentTest.cpp
GameEngine/test/Components/Shapes/: RectangleShapeTest.cpp
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  CPP_Game
android-project/app/jni/src/: CMakeLists.txt
android-project/gradle/wrapper/: gradle-wrapper.properties
